src/test/ui/typeck/issue-83621-placeholder-static-in-extern.rs
// Regression test for #83621.

extern "C" {
    static x: _; //~ ERROR: [E0121]
}

fn main() {}
